# Security-Forge-AI

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.tokensave/: branch-meta.json  config.json  tokensave.db
ai_framework/: README.md  __init__.py  demo.py  openrouter_login.py
backend/: README.md  __init__.py  app.py  devreload.py  launcher.py  pillars.py  providers.py  service.py  tui.py  ui.py
defense/: README.md  __init__.py  deps.py  review.py  signatures.py
docs/: AGENT_REVIEW_2026-07-15.md  AUTONOMOUS_PENTEST.md  EXTERNAL_TOOLKITS.md  HERMES_INTEGRATION_STEPS.md  INTEGRATION_PLAN.md  KNOWLEDGE_BASE.md  PROFESSIONAL_RED_TEAM_ROADMAP.md  README.md  RED_TEAM_AGENT_HARNESS.md  RED_TEAM_OPSEC.md  RED_TEAM_OPSEC.vi.md  SECURITY_HARDENING.md  SKILLS_AND_I18N.md  STRIX_PARITY_PLAN.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
i18n/: README.md  __init__.py  en.json  glossary.json  loader.py  vi.json
knowledge_base/: README.md  __init__.py  index.py  render.py  search.py
labs/: README.md  __init__.py  base.py  builtin.py  registry.py  server.py
tests/: __init__.py  conftest.py  test_accounts.py  test_api_security.py  test_app_error_handling.py  test_assets_coverage.py  test_autonomous_gate.py  test_backend.py  test_backend_pillars.py  test_browser.py  test_campaign.py  test_contracts.py  test_defense.py  test_deps.py  test_devreload.py  test_evidence_security.py  test_external_tools.py  test_findings.py  test_guardrails.py  test_harness.py  test_i18n.py  (+38 more)
(+238 files in other folders)
